--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "router": "^2.2.0"
   }
 }
